<resources>
    <string name="app_name">spc检测系统</string>
    <string name="title_activity_login">spc检测</string>
    <string name="scan_app">扫码APP</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名：</string>
    <string name="prompt_password">密码：</string>
    <string name="action_sign_in">登 录</string>
    <string name="save_pwd">记住密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_version">V1.0</string>
    <string name="error_invalid_password">登陆密码不能为空</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--标题-->
    <declare-styleable name="TopBar">
        <attr name="leftBackground" format="reference" />
        <attr name="rightBackground" format="reference" />
        <attr name="thridBackground" format="reference" />
        <attr name="titleText" format="string" />
        <attr name="titleTextSize" format="dimension" />
        <attr name="titleTextColor" format="color" />
    </declare-styleable>

    <string name="product_aspect_dete">外观检测</string>
    <string name="product_dete">质量采集</string>
    <string name="top_dete">上限值:</string>
    <string name="bottom_dete">下限值:</string>
    <string name="center_dete">中心值:</string>
    <string name="title_activity_product_right">ProductRightActivity</string>
    <string name="dete_value">检测值</string>
    <string name="right_create_time">创建时间</string>

    <!--标题栏菜单-->
    <string name="product_right_save">保存</string>
    <string name="product_right_new">新增</string>
</resources>
