<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductLeftActivity"
    android:orientation="vertical">

    <com.indusfo.spc.utils.TopBar
        android:id="@+id/product_left_activity_topbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorTopBar"
        app:leftBackground="@drawable/title_shape"
        app:rightBackground="@drawable/title_shape2"
        app:titleText="质量采集"
        app:titleTextColor="#FFF"
        app:titleTextSize="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="1dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp" >
                <GridView
                    android:id="@+id/grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="spacingWidthUniform" >
                </GridView>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#d40b0b"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/top_dete"/>
            <TextView
                android:id="@+id/left_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textColor="#d40b0b"/>
            <TextView
                android:id="@+id/left_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/center_dete"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#0a0909"/>
            <TextView
                android:id="@+id/left_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textColor="#0a0909"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#30d40b"
                android:layout_marginLeft="25dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/bottom_dete"/>

            <TextView
                android:id="@+id/left_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#30d40b"
                android:textSize="15sp"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:id="@+id/dete_value_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:digits="0123456789.\n"
                android:hint="@string/dete_value"/>
            <Button
                android:id="@+id/add_dete_value"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="确定"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:background="@drawable/bt_shape"/>
        </LinearLayout>

        <include layout="@layout/product_left_table"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">
        <Button
            android:id="@+id/left_button_1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/left_activity_button_shape2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/product_dete"/>
        <Button
            android:id="@+id/right_button_1"
            android:layout_width="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@drawable/left_activity_button_shape1"
            android:text="@string/product_aspect_dete"/>
    </LinearLayout>
</LinearLayout>